--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,4 +12,6 @@ jobs:
           uses: actions/checkout@v4
 
         - name: build docker image
-          run: docker build -t app1 .
+          run: |
+            docker build -t app1 .
+            docker run app1
