--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,5 +13,10 @@ jobs:
 
         - name: build docker image
           run: |
-            docker build -t app1 .
-            docker run app1
+            docker build -t 1998/shehab/app1:01 .
+            docker run 1998/shehab/app1:01
+        - name: Login to Docker Hub
+          uses: docker/login-action@v3
+          with:
+            username: ${{ vars.DOCKERHUB_USERNAME }}
+            password: ${{ secrets.DOCKERHUB_TOKEN }}
