--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,8 +13,8 @@ jobs:
 
         - name: build docker image
           run: |
-            docker build -t 1998/shehab/app1:01 .
-            docker run 1998/shehab/app1:01
+            docker build -t 1998shehab/app1:01 .
+            docker run 1998shehab/app1:01
         - name: Login to Docker Hub
           uses: docker/login-action@v3
           with:
